# Cpp-WB-exercise-1

./: CMakeLists.txt  Dockerfile  README.md
include/my_lib/: calculator.h
my_lib/: calculator.cpp
src/: main.cpp
tests/: calculator_test.cpp
